# json-schema-enforcer

./: README.md  pyproject.toml
json_schema_enforcer/: __init__.py  schema.py
